[test] 일정 목록 조회 시 작성자 데이터, 공유 일정 수 추가에 따른 테스트 코드 수정 #9